# driverless

./: README.md
0_frt_common/: README.md
0_frt_common/robot/: CMakeLists.txt  package.xml
0_frt_common/robot/launch/: robot.launch
0_frt_common/robot/urdf/: robot.gazebo  robot.xacro
0_frt_common/simulation/: README.md  package.xml
0_frt_common/simulation/launch/: gazebo_simulation.launch  goals.txt  movebase_seq.launch
0_frt_common/simulation/rviz/: navigation.rviz
0_frt_common/simulation/script/: move_base_seq.py
0_frt_common/simulation/worlds/: acceleration.world  lakis.world  skidpad.world  small_track.world  takis.world
1_perception/perception_common/: CMakeLists.txt  package.xml
1_perception/perception_common/config/: robot_localization_params.yaml
1_perception/perception_common/launch/: perception.launch
2_estimation/: README.md
2_estimation/cone_global_planner/: CMakeLists.txt  cone_global_planner_plugin.xml  package.xml
2_estimation/cone_global_planner/script/: README.md  global_planner.py  outlier_remover.py
2_estimation/cone_global_planner/src/: PolyfitBoost.hpp  README.md  cone_global_planner.cpp  (+3 more)
2_estimation/estimation_common/: CMakeLists.txt  package.xml
2_estimation/sbpl_lattice_planner/: CMakeLists.txt
3_control/car_description/: CMakeLists.txt  README.md  mainpage.dox  manifest.xml  package.xml  readme.txt
3_control/car_description_vel/: package.xml
3_control/robot_control/: CMakeLists.txt  README.md  package.xml
3_control/robot_control/launch/: movebase_seq.launch  robot_control.launch
darknet_ros/: README.md
(+78 files in other folders)
